Sculpt Paint Tool: Strength doesn't use unified paint settings #99172

Closed
opened 2022-06-25 20:56:07 +02:00 by Rodger Davis · 3 comments

System Information
Operating system: Linux-5.18.6-arch1-1-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Broken: version: 3.2.1 Release Candidate, branch: master, commit date: 2022-06-24 21:04, hash: 2287b98e7e
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-24 21:39, hash: 12bde317f4

Short description of error
The strength of the Paint Tool in sculpt mode only accounts for the current brush strength when use_unified_strength is toggled True.

Exact steps for others to reproduce the error

  1. Select cube
  2. Go into sculpt mode
  3. Select paint tool
  4. Swap paint tool's color (just so it's faster to get something other than white)
  5. Adjust Tools strength to 1.
  6. Toggle unified strength to true (Unified paint strength is usually .5 automatically)
  7. Paint on cube's verts.
  8. The strength of the brush will still be at 1.0 instead of 0.5

Here is a video showing the bug.
Bug render0001-4632.mp4

**System Information** Operating system: Linux-5.18.6-arch1-1-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.48.07 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Broken: version: 3.2.1 Release Candidate, branch: master, commit date: 2022-06-24 21:04, hash: `2287b98e7e` Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-24 21:39, hash: `12bde317f4` **Short description of error** The strength of the Paint Tool in sculpt mode only accounts for the current brush strength when use_unified_strength is toggled True. **Exact steps for others to reproduce the error** 1. Select cube 2. Go into sculpt mode 3. Select paint tool 4. Swap paint tool's color (just so it's faster to get something other than white) 5. Adjust Tools strength to 1. 6. Toggle unified strength to true (Unified paint strength is usually .5 automatically) 7. Paint on cube's verts. 8. The strength of the brush will still be at 1.0 instead of 0.5 ---- Here is a video showing the bug. [Bug render0001-4632.mp4](https://archive.blender.org/developer/F13229681/Bug_render0001-4632.mp4)
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis
Rodger Davis changed title from Paint Tool in Sculpt Mode - Strength doesn't use unified paint settings to Sculpt Paint Tool: Strength doesn't use unified paint settings 2022-06-26 16:59:05 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:11:17 +01:00
Raul Fernandez Hernandez self-assigned this 2024-02-09 18:46:21 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-13 15:22:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99172
No description provided.