Fix 99172 Sculpt Paint Tool: Strength doesn't use unified paint settings